--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<html><head></head><body><h1>Welcome</h1>
-</body></html>
+<html>
+<head>
+  <style>
+    body { background-color: white; }
+    h1 { color: black; }
+  </style>
+</head>
+<body>
+  <h1>Welcome</h1>
+</body>
+</html>
