--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
 <head>
   <style>
-    body { background-color: rgb(158, 0, 0); }
+    body {
+    color: black;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(158, 0, 0); 
+    }
     h1 { color: black; }
   </style>
 </head>
