--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             padding: 0;
             display: flex;
             flex-direction: column;
-            height: 100vh;
+            height: 100%;
         }
         #content {
             border: 1px solid #ccc;
