--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
             position: fixed;
             bottom: 0;
             width: 100%;
+            max-width: 1200px; /* Максимальная ширина для вкладок */
             background-color: #fff;
             border-top: 1px solid #ccc;
+            left: 50%; /* Центрирует панель на экране */
+            transform: translateX(-50%); /* Центрирует панель относительно экрана */
         }
         .tab {
             flex: 1;
