--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            max-width: 1200px;
+            max-width: 1000px;
             margin: 0 auto;
             padding: 0;
             display: flex;
             flex-direction: column;
-            height: 100vh; /* Высота экрана */
+            height: 100vh;
+            background-color: #f9f9f9;
         }
         #content {
             border: 1px solid #ccc;
             padding: 20px;
-            flex: 1; /* Контент растягивается на доступное пространство */
+            flex: 1;
             overflow-y: auto;
-            margin-bottom: 50px; /* Отступ для кнопок внизу */
+            margin-bottom: 70px;
         }
         .tabs {
             display: flex;
@@ -27,25 +28,40 @@
             position: fixed;
             bottom: 0;
             width: 100%;
-            max-width: 1200px; /* Максимальная ширина для вкладок */
-            background-color: #fff;
-            border-top: 1px solid #ccc;
-            left: 50%; /* Центрирует панель на экране */
-            transform: translateX(-50%); /* Центрирует панель относительно экрана */
+            max-width: 1000px;
+            background-color: rgba(244, 244, 244, 0.6);
+            left: 50%;
+            transform: translateX(-50%);
+            box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.2);
+            padding: 10px 0;
+            border-radius: 12px 12px 0 0;
         }
         .tab {
             flex: 1;
-            padding: 20px 0;
+            padding: 14px 0;
             cursor: pointer;
             text-align: center;
-            background-color: #f0f0f0;
-            border-right: 1px solid #ccc;
+            background-color: transparent;
+            border-right: 1px solid #ddd;
+            transition: all 0.3s ease;
+            font-weight: bold;
+            color: #000;
+            border-radius: 6px;
         }
         .tab:last-child {
             border-right: none;
         }
+        .tab:hover {
+            background-color: rgba(0, 0, 0, 0.1);
+            transform: translateY(-3px);
+        }
         .tab.active {
-            background-color: #ddd;
+            background-color: rgba(0, 0, 0, 0.1);
+            color: #0073e6;
+            box-shadow: inset 0px 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .tab.active:hover {
+            background-color: rgba(0, 0, 0, 0.15);
         }
     </style>
     <script>
