--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Бронирование тура</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -16,6 +17,7 @@
             background-color: #f9f9f9;
         }
         #content {
+            z-index: 1;
             border: 1px solid #ccc;
             padding: 20px;
             flex: 1;
@@ -23,6 +25,7 @@
             margin-bottom: 70px;
         }
         .tabs {
+            z-index: 1000;
             display: flex;
             justify-content: space-around;
             position: fixed;
@@ -42,26 +45,32 @@
             cursor: pointer;
             text-align: center;
             background-color: transparent;
-            border-right: 1px solid #ddd;
+            /* border-right: 1px solid #ddd; */
             transition: all 0.3s ease;
             font-weight: bold;
-            color: #000;
-            border-radius: 6px;
+            color: #727272;
+            /* border-radius: 6px; */
         }
         .tab:last-child {
             border-right: none;
         }
-        .tab:hover {
-            background-color: rgba(0, 0, 0, 0.1);
-            transform: translateY(-3px);
+        .tab i {
+            font-size: 28px; /* Размер иконок */
+            transition: all 0.3s ease;
         }
         .tab.active {
+            color: #000000;
+        }
+        .tab.active i {
             background-color: rgba(0, 0, 0, 0.1);
-            color: #0073e6;
-            box-shadow: inset 0px 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 20%; /* Круглая рамка вокруг иконки */
+            padding: 6px;
+        }
+        .tab.active:hover i {
+            background-color: rgba(0, 0, 0, 0.15); /* Тёмный цвет при наведении на активную иконку */
         }
         .tab.active:hover {
-            background-color: rgba(0, 0, 0, 0.15);
+            background-color: transparent; /* Без фона для всей кнопки при наведении на активную вкладку */
         }
     </style>
     <script>
@@ -83,9 +92,15 @@
 <body>
     <div id="content">Загрузка...</div>
     <div class="tabs">
-        <div class="tab active" id="about" onclick="loadPage('about')">О нас</div>
-        <div class="tab" id="howto" onclick="loadPage('howto')">Как забронировать</div>
-        <div class="tab" id="booking" onclick="loadPage('booking')">Бронирование</div>
+        <div class="tab active" id="about" onclick="loadPage('about')">
+            <i class="fas fa-info-circle"></i>
+        </div>
+        <div class="tab" id="howto" onclick="loadPage('howto')">
+            <i class="fas fa-book"></i>
+        </div>
+        <div class="tab" id="booking" onclick="loadPage('booking')">
+            <i class="fas fa-calendar-check"></i>
+        </div>
     </div>
 </body>
 </html>
