--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             padding: 20px;
             flex: 1;
             overflow-y: auto;
-            /* margin-bottom: 70px; */
+            margin-bottom: 65px;
         }
         .tabs {
             z-index: 1000;
@@ -36,7 +36,7 @@
             left: 50%;
             transform: translateX(-50%);
             box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.2);
-            padding: 5px 0;
+            padding: 7px 0;
             border-radius: 12px 12px 0 0;
         }
         .tab {
