--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             z-index: 1000;
             display: flex;
             justify-content: space-around;
+            align-items: center;
             position: fixed;
             bottom: 0;
             width: 100%;
@@ -35,9 +36,10 @@
             background-color: rgba(244, 244, 244, 0.6);
             left: 50%;
             transform: translateX(-50%);
-            box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.2);
-            padding: 7px 0;
-            border-radius: 12px 12px 0 0;
+            height: 65px;
+            /* box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.2); */
+            /* padding: 7px 0; */
+            /* border-radius: 12px 12px 0 0; */
         }
         .tab {
             flex: 1;
@@ -57,7 +59,7 @@
         .tab i {
             font-size: 28px; /* Размер иконок */
             transition: all 0.3s ease;
-            padding: 10px;
+            padding: 10px 0 0 0;
         }
         .tab.active {
             color: #000000;
