--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             font-weight: bold;
             color: #727272;
             /* border-radius: 6px; */
-            
+            outline: none;
+            -webkit-tap-highlight-color: transparent;
         }
         .tab:last-child {
             border-right: none;
