modified:   about.html modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         }
         #content {
             z-index: 1;
-            border: 1px solid #ccc;
-            padding: 20px;
-            flex: 1;
-            overflow-y: auto;
+            /* border: 1px solid #ccc; */
+            /* padding: 20px; */
+            /* flex: 1; */
+            /* overflow-y: auto; */
             margin-bottom: 65px;
         }
         .tabs {
