--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Бронирование тура</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
+        :root {
+          --background-color: #f9f9f9;
+        }
         body {
             font-family: Arial, sans-serif;
             max-width: 1000px;
@@ -14,7 +17,7 @@
             display: flex;
             flex-direction: column;
             height: 100vh;
-            background-color: #f9f9f9;
+            background-color: var(--background-color);
         }
         #content {
             z-index: 1;
@@ -75,6 +78,9 @@
         }
         .tab.active:hover {
             background-color: transparent; /* Без фона для всей кнопки при наведении на активную вкладку */
+        }
+        .end {
+          height: 68px;
         }
     </style>
     <script>
