modified:   about.html modified:   booking.html new file:   static/inst.svg new file:   static/tg.svg new file:   static/vk.png

--- a/booking.html
+++ b/booking.html
@@ -67,8 +67,8 @@
 </style>
 <booking>
     <div class="container">
-        <h1>ЕСЛИ У ВАС ЕСТЬ ВОПРОСЫ И ПОЖЕЛАНИЯ</h1>
-        <p>ОСТАВЬТЕ СВОИ КОНТАКТЫ, МЫ СВЯЖЕМСЯ С ВАМИ В БЛИЖАЙШЕЕ ВРЕМЯ</p>
+        <h1>Если у вас есть вопросы и пожелания</h1>
+        <p>Оставьте свои контакты, мы свяжемся с вами в ближайшее время</p>
         
         <form>
             <label for="phone">Номер телефона</label>
