modified:   booking.html

--- a/booking.html
+++ b/booking.html
@@ -38,7 +38,7 @@
     input, textarea {
         padding: 10px;
         margin-bottom: 15px;
-        border: 1px solid #ccc;
+        border: 1px solid #a19797;
         border-radius: 5px;
         font-size: 16px;
     }
@@ -48,15 +48,17 @@
     }
     button {
         padding: 10px;
-        background-color: #3498db;
+        background-color: #a18b71;
         color: #fff;
         border: none;
         border-radius: 5px;
         font-size: 16px;
         cursor: pointer;
+        outline: none;
+        -webkit-tap-highlight-color: transparent;
     }
     button:hover {
-        background-color: #2980b9;
+        background-color: #efebeb;
     }
     .note {
         font-size: 12px;
